force-app/main/default/objects/File_System__c/File_System__c.object-meta.xml
<CustomObject>
    <label>File System</label>
    <nameField>
        <label>File System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>