force-app/main/default/objects/File_System__c/fields/FS_UUID__c.field-meta.xml
<CustomField>
    <fullName>FS_UUID__c</fullName>
    <externalId>true</externalId>
    <label>FS UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>