force-app/main/default/objects/File_System__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informatica EDC - HDFS</fullName>
            </value>
            <value>
                <fullName>Informatica EDC - File System</fullName>
            </value>
            <value>
                <fullName>Informatica EDC - Amazon S3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>